Unwanted events removed and contact section updated

--- a/index.html
+++ b/index.html
@@ -107,24 +107,24 @@
             <img class="logo" id="mainLogo" src="images/i.Fest_logo_newWhite.png" />
           </div>
           
-          <!-- 
+          
           <input
             type="checkbox"
             id="navcheck"
             role="button"
             title="menu"
             style="z-index: 20"
-          /> -->
+          /> 
 
-          <!-- <label for="navcheck" aria-hidden="true" title="menu">
+          <label for="navcheck" aria-hidden="true" title="menu">
             <span class="burger">
               <span class="bar">
                 <span class="visuallyhidden">Menu</span>
               </span>
             </span>
-          </label> -->
+          </label> 
 
-          <!-- <nav id="menu" style="z-index: 20">
+          <nav id="menu" style="z-index: 20">
             <a href="./index.html">Home</a>
             <a href="./event/event.html">Events</a>
             <a href="./workshops.html">Workshops</a>
@@ -151,7 +151,7 @@
                 ></a>
               </li>
             </ul>
-          </nav> -->
+          </nav> 
 
           <!-- Pop up icons -->
           <div class="container">
@@ -363,7 +363,7 @@
             Dhirubhai Ambani Institute of Information and Technology (DA-IICT),
             known for its research and development, has emerged as the torch
             bearer among the premier technological institution of Gujarat over
-            the past 16 years.<br /><br />
+            the past 19 years.<br /><br />
             i.Fest is one of the most anticipated and acknowledged technical
             fest all over Gujarat. It is lauded for its versatile and wide
             ranging technical, social and non-technical events. i.Fest provides
@@ -423,16 +423,19 @@
                   padding-top: 20px;
                 "
               >
-                <p>Devanshu Vithalani: <br> 
+                <!--<p>Devanshu Vithalani: <br> 
                   +91 9714533000</p>
                 <p>Madhav Choksi: <br> 
-                  +91 9427772012</p>
+                  +91 9427772012</p>-->
                 <p>Devyani Panchal: <br> 
                   +91 9824413747</p>
                 <p>Visaj Shah: <br>
                   +91 8141764794</p>
                 <p>Karan Bhatia: <br>
                   +91 8200501205</p>
+                <p style="letter-spacing: 2px;">
+                  IEEE SB DAIICT, Faculty Building 1,<br> DA-IICT Campus Near Indroda Circle Gandhinagar,<br> Gujarat - 382007
+                </p>
                 <!-- <h2
                   style="
                     color: #fff;
@@ -450,7 +453,7 @@
 
               <ul class="social-media">
                 <li>
-                  <a href="https://m.facebook.com/ifestdaiict" target="_blank"
+                  <a href="https://www.facebook.com/ifestdaiict/" target="_blank"
                     ><i class="fa fa-facebook" aria-hidden="true"></i
                   ></a>
                 </li>
