Team members Page updated with new members

--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>i.Fest '19 | Team</title>
+    <title>i.Fest '20 | Team</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./style/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -183,12 +183,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/1.jpg">
+                            <img src="images/team/9.jpeg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Abhi Ratnman</h3>
+                                    <h3>Rahil Patel</h3>
                                     <h5>Mentor</h5>
-                                    <h5><a href="tel:+917405892855">+91 74058 92855</a></h5>
+                                    <h5><a href="tel:+919375962477">+91 93759 62477</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -197,12 +197,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/2.jpg">
+                            <img src="images/team/DarshakPatel-min.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Jainil Pariya</h3>
+                                    <h3>Darshak Patel</h3>
                                     <h5>Mentor</h5>
-                                    <h5><a href="tel:+919558021183">+91 95580 21183</a></h5>
+                                    <h5><a href="tel:+919904939083">+91 99049 39083</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -211,12 +211,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/3.jpg">
+                            <img src="images/team/5.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Shivani Bhandari</h3>
+                                    <h3>Yashvi Shah</h3>
                                     <h5>Mentor</h5>
-                                    <h5><a href="tel:+917016101851">+91 70161 01851</a></h5>
+                                    <h5><a href="tel:+919725035934">+91 97250 35934</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -225,12 +225,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/4.jpg">
+                            <img src="images/team/6.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Vishvesh Panchal</h3>
+                                    <h3>Harsh Patel</h3>
                                     <h5>Mentor</h5>
-                                    <h5><a href="tel:+919429023152">+91 94290 23152</a></h5>
+                                    <h5><a href="tel:+917990252119">+91 79902 52119</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -246,12 +246,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/9.jpeg">
+                            <img src="images/team/12.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Rahil Patel</h3>
+                                    <h3>Devanshu Vithlani</h3>
                                     <h5>PR & Marketing</h5>
-                                    <h5><a href="tel:+919375962477">+91 93759 62477</a></h5>
+                                    <h5><a href="tel:+919714533000">+91 97145 33000</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -260,12 +260,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/13.jpg">
+                            <img src="images/team/siddarth.heic">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Parth Katrodiya</h3>
+                                    <h3>Siddarth Rathod</h3>
                                     <h5>PR & Marketing</h5>
-                                    <h5><a href="tel:+919429432142">+91 94294 32142</a></h5>
+                                    <h5><a href="tel:+917046098218">+91 70460 98218</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -274,12 +274,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/17.jpg">
+                            <img src="images/team/ashish-min.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Vishwa Shah</h3>
+                                    <h3>Ashish Dhami</h3>
                                     <h5>PR & Marketing</h5>
-                                    <h5><a href="tel:+919408780818">+91 94087 80818</a></h5>
+                                    <h5><a href="tel:+918460675802">+91 84606 75802</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -288,12 +288,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/7.jpeg">
+                            <img src="images/team/jeelfaldu-min.jpeg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Khyati Bhuva</h3>
+                                    <h3>Jeel Faldu</h3>
                                     <h5>PR & Marketing</h5>
-                                    <h5><a href="tel:+917016332328">+91 70163 32328</a></h5>
+                                    <h5><a href="tel:+919328003106">+91 93280 03106</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -302,7 +302,7 @@
             </ul>
 
 
-            <div class="page-title">
+            <!--<div class="page-title">
                 <h2>Designing</h2>
             </div>
             <ul class="cont-grid">
@@ -348,7 +348,7 @@
                         </div>
                     </div>
                 </li>
-            </ul>
+            </ul>-->
 
 
 
@@ -359,10 +359,10 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/10.jpg">
+                            <img src="images/team/16.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Nikunj Shah</h3>
+                                    <h3>Madhavendra Choksi</h3>
                                     <h5>Sponsorship</h5>
                                     <h5><a href="tel:+919924230332">+91 99242 30332</a></h5>
                                 </div>
@@ -373,12 +373,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/8.JPG">
+                            <img src="images/team/14.JPG">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Vedant Thakkar</h3>
+                                    <h3>Devynai Panchal</h3>
                                     <h5>Sponsorship</h5>
-                                    <h5><a href="tel:+919825551070">+91 98255 51070</a></h5>
+                                    <h5><a href="tel:+919824413747">+91 98244 13747</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -387,12 +387,12 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/16.JPG">
+                            <img src="images/team/fenil-min.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Madhavendra Choksi</h3>
+                                    <h3>Fenil Kamdar</h3>
                                     <h5>Sponsorship</h5>
-                                    <h5><a href="tel:+919427772012">+91 94277 72012</a></h5>
+                                    <h5><a href="tel:+919825206109">+91 98252 06109</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -401,12 +401,103 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/11.jpg">
+                            <img src="images/team/Prabhav-min.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Kartavi Shah</h3>
+                                    <h3>Prabhav Shah</h3>
                                     <h5>Sponsorship</h5>
-                                    <h5><a href="tel:+2348121451665">+234 81214 51665</a></h5>
+                                    <h5><a href="tel:+919106505620">+91 91065 05620</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/jaimit-joshi-min.jpeg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Jaimit Joshi</h3>
+                                    <h5>Sponsorship</h5>
+                                    <h5><a href="tel:+919327035369">+91 93270 35369</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+            
+            <div class="page-title">
+                <h2>Event Management</h2>
+            </div>
+            <ul class="cont-grid">
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/visaj-min.jpg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Visaj Shah</h3>
+                                    <h5>Event Management</h5>
+                                    <h5><a href="tel:+918141764794">+91 81417 64794</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/karan-min.jpg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Karan Bhatia</h3>
+                                    <h5>Event Management</h5>
+                                    <h5><a href="tel:+919409498216">+91 94094 98216</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/nirmit-min.jpg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Nirmit Ghughu</h3>
+                                    <h5>Event Management</h5>
+                                    <h5><a href="tel:+918380901222">+91 83809 01222</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/rinkal-min.jpg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Rinkal Naik</h3>
+                                    <h5>Event Management</h5>
+                                    <h5><a href="tel:+917069670451">+91 70696 70451</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/mohildesai-min.jpg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Mohil Desai</h3>
+                                    <h5>Event Management</h5>
+                                    <h5><a href="tel:+919106709058">+91 91067 09058</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -416,18 +507,18 @@
 
 
             <div class="page-title">
-                <h2>Production</h2>
+                <h2>Web and App Development Team</h2>
             </div>
             <ul class="cont-grid">
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/15.jpg">
+                            <img src="images/team/meetpatel-min.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Meet Raval</h3>
-                                    <h5>Production</h5>
-                                    <h5><a href="tel:+91886724439">+91 8867 24439</a></h5>
+                                    <h3>Meet Patel</h3>
+                                    <h5>Web Development</h5>
+                                    <h5><a href="tel:+919586156902">+91 95861 56902</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -436,18 +527,80 @@
                 <li>
                     <div class="user">
                         <div class="cont-image">
-                            <img src="images/team/6.jpg">
+                            <img src="images/team/hitesh-min.jpg">
                             <div class="overlay">
                                 <div class="text">
-                                    <h3>Harsh Patel</h3>
-                                    <h5>Production</h5>
-                                    <h5><a href="tel:+917990252119">+91 79902 52119</a></h5>
+                                    <h3>Hitesh Goyal</h3>
+                                    <h5>Web Development</h5>
+                                    <h5><a href="tel:+918950125175">+91 89501 25175</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/Adit-min.jpg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Adit Shah</h3>
+                                    <h5>Web Development</h5>
+                                    <h5><a href="tel:+919723285800">+91 97232 85800</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/deven-min.jpeg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Deven Vachhani</h3>
+                                    <h5>App Development</h5>
+                                    <h5><a href="tel:+919824978996">+91 98249 78996</a></h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </li>
 
+            </ul>
+
+            <div class="page-title">
+                <h2>Content Writing and Graphic Designing</h2>
+            </div>
+            <ul class="cont-grid">
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/DarshilShah-min.jpg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Darshil Shah</h3>
+                                    <h5>Content Writing</h5>
+                                    <h5><a href="tel:+918320475542">+91 83204 75542</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="user">
+                        <div class="cont-image">
+                            <img src="images/team/yash.jpeg">
+                            <div class="overlay">
+                                <div class="text">
+                                    <h3>Yash Chaudhari</h3>
+                                    <h5>Graphic Designing</h5>
+                                    <h5><a href="tel:+919726009423">+91 97260 09423</a></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
 
         </section>
