New photos added to gallery and workshop link removed from navbar

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <nav id="menu" style="z-index: 20">
             <a href="./index.html">Home</a>
             <a href="./event/event.html">Events</a>
-            <a href="./workshops.html">Workshops</a>
+            <!--<a href="./workshops.html">Workshops</a>-->
             <a href="./team.html">Team</a>
             <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
             <a href="./register.html">Register</a>
@@ -141,7 +141,7 @@
                 ></a>
               </li>
               <li>
-                <a href="https://m.facebook.com/ifestdaiict" target="_blank"
+                <a href="https://www.facebook.com/ifestdaiict/" target="_blank"
                   ><i class="fa fa-facebook" aria-hidden="true"></i
                 ></a>
               </li>
