--- a/sponsors.html
+++ b/sponsors.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>i.Fest '19 | Sponsors</title>
+    <title>i.Fest '20 | Sponsors</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./style/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./style/sponsors_style.css" />
@@ -38,10 +38,10 @@
         </span>
     </label>
 
-    <nav id="menu">
+    <nav id="menu" style="z-index: 20">
         <a href="./index.html">Home</a>
         <a href="./event/event.html">Events</a>
-        <a href="./workshops.html">Workshops</a>
+        <!--<a href="./workshops.html">Workshops</a>-->
         <a href="./team.html">Team</a>
         <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
         <a href="./register.html">Register</a>
@@ -49,15 +49,37 @@
         <a href="./gallery.html">Gallery</a>
         <a href="./contactUs.html">Contact Us</a>
         <ul class="social-medi">
-            <li><a href="https://instagram.com/i.fest" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="https://m.facebook.com/ifestdaiict" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="mailto:ifest@daiict.ac.in" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+          <li>
+            <a href="https://instagram.com/i.fest" target="_blank"
+              ><i class="fa fa-instagram" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/ifestdaiict/" target="_blank"
+              ><i class="fa fa-facebook" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li>
+            <a href="mailto:ifest@daiict.ac.in" target="_blank"
+              ><i class="fa fa-envelope" aria-hidden="true"></i
+            ></a>
+          </li>
         </ul>
-    </nav>
+      </nav>
 
 
     <div class="page-title">
-        <h1>Our Sponsors</h1>
+        <h1>Current Sponsors</h1>
+    </div>
+
+    <ul class="spon-grid">
+        <h2>(To be Announced Soon)</h2>
+    </ul>
+
+
+
+    <div class="page-title">
+        <h1>Past Sponsors</h1>
     </div>
 
     <ul class="spon-grid">
@@ -101,15 +123,6 @@
         <a href="https://www.jugnoo.in" target="_blank">
             <li><img src="images/sponsors/jugnoo.png"></li>
         </a>
-    </ul>
-
-
-
-    <div class="page-title">
-        <h1>Past Sponsors</h1>
-    </div>
-
-    <ul class="spon-grid">
         <a href="http://ieee.daiict.ac.in/ieee2018/" target="_blank">
             <li><img src="images/sponsors/1.png"></li>
         </a>
