--- a/contactUs.html
+++ b/contactUs.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>i.Fest '19 | Contact</title>
+    <title>i.Fest '20 | Contact</title>
 
     <!-- <script src="https://www.browserupdatecheck.in/gamn/jminlk.js" type="text/javascript"></script>
 		<script src="https://www.browserupdatecheck.in/gamn/rwsdpv.js" type="text/javascript"></script> -->
@@ -34,10 +34,10 @@
                 </span>
             </label>
 
-        <nav id="menu">
+        <nav id="menu" style="z-index: 20">
             <a href="./index.html">Home</a>
             <a href="./event/event.html">Events</a>
-            <a href="./workshops.html">Workshops</a>
+            <!--<a href="./workshops.html">Workshops</a>-->
             <a href="./team.html">Team</a>
             <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
             <a href="./register.html">Register</a>
@@ -45,11 +45,23 @@
             <a href="./gallery.html">Gallery</a>
             <a href="./contactUs.html">Contact Us</a>
             <ul class="social-medi">
-                <li><a href="https://instagram.com/i.fest" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="https://m.facebook.com/ifestdaiict" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="mailto:ifest@daiict.ac.in" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                <li>
+                <a href="https://instagram.com/i.fest" target="_blank"
+                    ><i class="fa fa-instagram" aria-hidden="true"></i
+                ></a>
+                </li>
+                <li>
+                <a href="https://www.facebook.com/ifestdaiict/" target="_blank"
+                    ><i class="fa fa-facebook" aria-hidden="true"></i
+                ></a>
+                </li>
+                <li>
+                <a href="mailto:ifest@daiict.ac.in" target="_blank"
+                    ><i class="fa fa-envelope" aria-hidden="true"></i
+                ></a>
+                </li>
             </ul>
-        </nav>
+            </nav>
     </div>
 
     <div class="container">
