--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>i.Fest '19 | Gallery</title>
+    <title>i.Fest '20 | Gallery</title>
 
     <!-- <script src="https://www.browserupdatecheck.in/gamn/jminlk.js" type="text/javascript"></script>
 		<script src="https://www.browserupdatecheck.in/gamn/rwsdpv.js" type="text/javascript"></script> -->
@@ -34,23 +34,34 @@
                                 </span>
                             </span>
                         </label>
-
-            <nav id="menu">
-                <a href="./index.html">Home</a>
-                <a href="./event/event.html">Events</a>
-                <a href="./workshops.html">Workshops</a>
-                <a href="./team.html">Team</a>
-                <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
-                <a href="./register.html">Register</a>
-                <a href="./sponsors.html">Sponsors</a>
-                <a href="./gallery.html">Gallery</a>
-                <a href="./contactUs.html">Contact Us</a>
-                <ul class="social-medi">
-                    <li><a href="https://instagram.com/i.fest" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://m.facebook.com/ifestdaiict" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="mailto:ifest@daiict.ac.in" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-                </ul>
-            </nav>
+                <nav id="menu" style="z-index: 20">
+                    <a href="./index.html">Home</a>
+                    <a href="./event/event.html">Events</a>
+                    <!--<a href="./workshops.html">Workshops</a>-->
+                    <a href="./team.html">Team</a>
+                    <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
+                    <a href="./register.html">Register</a>
+                    <a href="./sponsors.html">Sponsors</a>
+                    <a href="./gallery.html">Gallery</a>
+                    <a href="./contactUs.html">Contact Us</a>
+                    <ul class="social-medi">
+                        <li>
+                        <a href="https://instagram.com/i.fest" target="_blank"
+                            ><i class="fa fa-instagram" aria-hidden="true"></i
+                        ></a>
+                        </li>
+                        <li>
+                        <a href="https://www.facebook.com/ifestdaiict/" target="_blank"
+                            ><i class="fa fa-facebook" aria-hidden="true"></i
+                        ></a>
+                        </li>
+                        <li>
+                        <a href="mailto:ifest@daiict.ac.in" target="_blank"
+                            ><i class="fa fa-envelope" aria-hidden="true"></i
+                        ></a>
+                        </li>
+                    </ul>
+                    </nav>
 
 
             <div class="container">
@@ -65,6 +76,34 @@
                         <div class="subTitle animated bounceInUp" style="animation-duration: 2s;animation-delay: 0.7s">Gallery</div>
 
                         <ul class="img-Grid">
+
+                            <!--Photos from i.Fest 2019-->
+                            <li><img src="images/gallery/22.JPG"></li>
+                            <li><img src="images/gallery/23.JPG"></li>
+                            <li><img src="images/gallery/24.JPG"></li>
+                            <li><img src="images/gallery/25.JPG"></li>
+                            <li><img src="images/gallery/26.JPG"></li>
+                            <li><img src="images/gallery/27.JPG"></li>
+                            <li><img src="images/gallery/28.JPG"></li>
+                            <li><img src="images/gallery/29.JPG"></li>
+                            <li><img src="images/gallery/30.JPG"></li>
+                            <li><img src="images/gallery/31.JPG"></li>
+                            <li><img src="images/gallery/32.JPG"></li>
+                            <li><img src="images/gallery/33.JPG"></li>
+                            <li><img src="images/gallery/34.JPG"></li>
+                            <li><img src="images/gallery/35.JPG"></li>
+                            <li><img src="images/gallery/36.JPG"></li>
+                            <li><img src="images/gallery/37.JPG"></li>
+                            <li><img src="images/gallery/38.JPG"></li>
+                            <li><img src="images/gallery/39.JPG"></li>
+                            <li><img src="images/gallery/40.JPG"></li>
+                            <li><img src="images/gallery/41.JPG"></li>
+                            <li><img src="images/gallery/42.JPG"></li>
+                            <li><img src="images/gallery/43.JPG"></li>
+                            <li><img src="images/gallery/44.JPG"></li>
+                            <li><img src="images/gallery/45.JPG"></li>
+
+                            <!-- Past Year i.Fest Photos -->
                             <li><img src="images/gallery/1.JPG"></li>
                             <li><img src="images/gallery/2.JPG"></li>
                             <li><img src="images/gallery/3.JPG"></li>
