--- a/register.html
+++ b/register.html
@@ -331,17 +331,16 @@
     <input type="checkbox" id="navcheck" role="button" title="menu" hidden>
 
     <label for="navcheck" aria-hidden="true" title="menu">
-                <span class="burger">
-                    <span class="bar">
-                        <span class="visuallyhidden">Menu</span>
-                    </span>
-                </span>
-            </label>
-
-    <nav id="menu">
+         <span class="burger">
+            <span class="bar">
+                <span class="visuallyhidden">Menu</span>
+            </span>
+        </span>
+    </label>
+    <nav id="menu" style="z-index: 20">
         <a href="./index.html">Home</a>
         <a href="./event/event.html">Events</a>
-        <a href="./workshops.html">Workshops</a>
+        <!--<a href="./workshops.html">Workshops</a>-->
         <a href="./team.html">Team</a>
         <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
         <a href="./register.html">Register</a>
@@ -349,11 +348,23 @@
         <a href="./gallery.html">Gallery</a>
         <a href="./contactUs.html">Contact Us</a>
         <ul class="social-medi">
-            <li><a href="https://instagram.com/i.fest" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="https://m.facebook.com/ifestdaiict" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="mailto:ifest@daiict.ac.in" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+            <li>
+            <a href="https://instagram.com/i.fest" target="_blank"
+                ><i class="fa fa-instagram" aria-hidden="true"></i
+            ></a>
+            </li>
+            <li>
+            <a href="https://www.facebook.com/ifestdaiict/" target="_blank"
+                ><i class="fa fa-facebook" aria-hidden="true"></i
+            ></a>
+            </li>
+            <li>
+            <a href="mailto:ifest@daiict.ac.in" target="_blank"
+                ><i class="fa fa-envelope" aria-hidden="true"></i
+            ></a>
+            </li>
         </ul>
-    </nav>
+        </nav>
 
 
 
