chore: multiple fixes
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/menu.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="style/navigation.css">
-
+    <link rel="icon" href="images/i.Fest_logo_newWhite.png">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 </head>
