--- a/contactUs.html
+++ b/contactUs.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="style/navigation.css">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="./images/i.Fest_logo_newWhite.png">
     <link href="/submit.php">
 </head>
 
@@ -39,8 +39,8 @@
             <a href="./event/event.html">Events</a>
             <!--<a href="./workshops.html">Workshops</a>-->
             <a href="./team.html">Team</a>
-            <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
-            <a href="./register.html">Register</a>
+<!--             <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
+            <a href="./register.html">Register</a> -->
             <a href="./sponsors.html">Sponsors</a>
             <a href="./gallery.html">Gallery</a>
             <a href="./contactUs.html">Contact Us</a>
@@ -75,15 +75,15 @@
             <div class="row">
                 <div class="column">
                     <h3>ADDRESS</h3>
-                    <p class="contact-text">DA-IICT, Near Indroda Circle, Gandhinagar.</p>
+                    <p class="contact-text">DA-IICT, Near Indroda Circle, Gandhinagar </p>
                 </div>
                 <div class="column">
                     <h3>PHONE</h3>
-                    <p class="contact-text">+91 7990252119</p>
+                    <p class="contact-text">+91 9375962477</p>
                 </div>
                 <div class="column">
                     <h3>EMAIL</h3>
-                    <p class="contact-text">ifest2019.daiict@gmail.com⁠⁠⁠⁠</p>
+                    <p class="contact-text">ifest2020.daiict@gmail.com⁠⁠⁠⁠</p>
                 </div>
             </div>
         </section>
@@ -94,7 +94,7 @@
 
         <div class="ro">
             <div class="colum">
-                <form action="mailto:ifest2019.daiict@gmail.com" method="POST">
+                <form action="mailto:ifest2020.daiict@gmail.com" method="POST">
                     <input type="text" id="name" name="name" required="required" placeholder="Your Name...">
 
                     <input type="text" id="email" name="email" required="required" placeholder="Your Email...">
@@ -112,7 +112,7 @@
         <ul class="social">
             <li><a href="https://www.facebook.com/ifestdaiict/" target="_blank"><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://www.instagram.com/i.fest/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="mailto:ifest2018.daiict@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
+            <li><a href="mailto:ifest2020.daiict@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
         </ul>
     </footer>
 
