--- a/sponsors.html
+++ b/sponsors.html
@@ -12,7 +12,7 @@
     <link href="//fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="icon" href="images/logow.png">
+    <link rel="icon" href="images/i.Fest_logo_newWhite.png">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script type="text/javascript" src="./js/nav.js"></script>
