fix:repeating sponsors,login-register links and title logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>i.Fest '20 | Home Page</title>
-    <link rel="icon" href="./images/i.Fest_logo_newWhite.png" />
+    <link rel="icon" href="./images/i.Fest_logo_new.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
