--- a/sponsors.html
+++ b/sponsors.html
@@ -24,7 +24,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="images/i.Fest_logo_newWhite.png" />
+    <link rel="icon" href="./images/i.Fest_logo_new.png" />
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -93,27 +93,7 @@
     </div>
 
     <ul class="spon-grid">
-      <a href="http://ieee.daiict.ac.in/ieee2018/" target="_blank">
-        <li><img src="images/sponsors/1.png" /></li>
-      </a>
-      <a href="https://www.endeavorcareers.com/" target="_blank">
-        <li><img src="images/sponsors/3.jpg" /></li>
-      </a>
-      <a href="http://ieeegujaratsection.org/" target="_blank">
-        <li><img src="images/sponsors/4.png" /></li>
-      </a>
-      <a href="https://sbi.co.in/" target="_blank">
-        <li><img src="images/sponsors/5.png" /></li>
-      </a>
-      <a href="https://gujcost.gujarat.gov.in/#" target="_blank">
-        <li><img src="images/sponsors/6.png" /></li>
-      </a>
-      <a href="http://ias.daiict.ac.in/" target="_blank">
-        <li><img src="images/sponsors/8.png" /></li>
-      </a>
-      <a href="http://sites.ieee.org/sb-daiict-wie/" target="_blank">
-        <li><img src="images/sponsors/9.png" /></li>
-      </a>
+
       <!--  -->
       <a href="http://beannco.com" target="_blank">
         <li><img src="images/sponsors/beansCo.jpg" /></li>
