--- a/event/event.html
+++ b/event/event.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="../css/menu.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/animate.css">
-    <link rel="icon" href="./images/logo.png">
+    <link rel="icon" href="../images/i.Fest_logo_new.png" />
 </head>
 
 <body>
