--- a/contactUs.html
+++ b/contactUs.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="column">
                     <h3>EMAIL</h3>
-                    <p class="contact-text">ifest2020.daiict@gmail.com⁠⁠⁠⁠</p>
+                    <p class="contact-text"> ifest@daiict.ac.in⁠⁠⁠⁠</p>
                 </div>
             </div>
         </section>
@@ -95,7 +95,7 @@
 
         <div class="ro">
             <div class="colum">
-                <form action="mailto:ifest2020.daiict@gmail.com" method="POST">
+                <form action="mailto: ifest@daiict.ac.in" method="POST">
                     <input type="text" id="name" name="name" required="required" placeholder="Your Name...">
 
                     <input type="text" id="email" name="email" required="required" placeholder="Your Email...">
