--- a/gallery.html
+++ b/gallery.html
@@ -79,53 +79,53 @@
                         <ul class="img-Grid">
 
                             <!--Photos from i.Fest 2019-->
-                            <li><img src="images/gallery/22.JPG"></li>
-                            <li><img src="images/gallery/23.JPG"></li>
-                            <li><img src="images/gallery/24.JPG"></li>
-                            <li><img src="images/gallery/25.JPG"></li>
-                            <li><img src="images/gallery/26.JPG"></li>
-                            <li><img src="images/gallery/27.JPG"></li>
-                            <li><img src="images/gallery/28.JPG"></li>
-                            <li><img src="images/gallery/29.JPG"></li>
-                            <li><img src="images/gallery/30.JPG"></li>
-                            <li><img src="images/gallery/31.JPG"></li>
-                            <li><img src="images/gallery/32.JPG"></li>
-                            <li><img src="images/gallery/33.JPG"></li>
-                            <li><img src="images/gallery/34.JPG"></li>
-                            <li><img src="images/gallery/35.JPG"></li>
-                            <li><img src="images/gallery/36.JPG"></li>
-                            <li><img src="images/gallery/37.JPG"></li>
-                            <li><img src="images/gallery/38.JPG"></li>
-                            <li><img src="images/gallery/39.JPG"></li>
-                            <li><img src="images/gallery/40.JPG"></li>
-                            <li><img src="images/gallery/41.JPG"></li>
-                            <li><img src="images/gallery/42.JPG"></li>
-                            <li><img src="images/gallery/43.JPG"></li>
-                            <li><img src="images/gallery/44.JPG"></li>
-                            <li><img src="images/gallery/45.JPG"></li>
+                            <li><img src="images/gallery/22-min.JPG"></li>
+                            <li><img src="images/gallery/23-min.JPG"></li>
+                            <li><img src="images/gallery/24-min.JPG"></li>
+                            <li><img src="images/gallery/25-min.JPG"></li>
+                            <li><img src="images/gallery/26-min.JPG"></li>
+                            <li><img src="images/gallery/27-min.JPG"></li>
+                            <li><img src="images/gallery/28-min.JPG"></li>
+                            <li><img src="images/gallery/29-min.JPG"></li>
+                            <li><img src="images/gallery/30-min.JPG"></li>
+                            <li><img src="images/gallery/31-min.JPG"></li>
+                            <li><img src="images/gallery/32-min.JPG"></li>
+                            <li><img src="images/gallery/33-min.JPG"></li>
+                            <li><img src="images/gallery/34-min.JPG"></li>
+                            <li><img src="images/gallery/35-min.JPG"></li>
+                            <li><img src="images/gallery/36-min.JPG"></li>
+                            <li><img src="images/gallery/37-min.JPG"></li>
+                            <li><img src="images/gallery/38-min.JPG"></li>
+                            <li><img src="images/gallery/39-min.JPG"></li>
+                            <li><img src="images/gallery/40-min.JPG"></li>
+                            <li><img src="images/gallery/41-min.JPG"></li>
+                            <li><img src="images/gallery/42-min.JPG"></li>
+                            <li><img src="images/gallery/43-min.JPG"></li>
+                            <li><img src="images/gallery/44-min.JPG"></li>
+                            <li><img src="images/gallery/45-min.JPG"></li>
 
                             <!-- Past Year i.Fest Photos -->
-                            <li><img src="images/gallery/1.JPG"></li>
-                            <li><img src="images/gallery/2.JPG"></li>
-                            <li><img src="images/gallery/3.JPG"></li>
-                            <li><img src="images/gallery/4.JPG"></li>
-                            <li><img src="images/gallery/5.JPG"></li>
-                            <li><img src="images/gallery/6.JPG"></li>
-                            <li><img src="images/gallery/7.JPG"></li>
-                            <li><img src="images/gallery/8.JPG"></li>
-                            <li><img src="images/gallery/9.JPG"></li>
-                            <li><img src="images/gallery/10.JPG"></li>
-                            <li><img src="images/gallery/11.JPG"></li>
-                            <li><img src="images/gallery/12.JPG"></li>
-                            <li><img src="images/gallery/13.JPG"></li>
-                            <li><img src="images/gallery/14.JPG"></li>
-                            <li><img src="images/gallery/15.JPG"></li>
-                            <li><img src="images/gallery/16.JPG"></li>
-                            <li><img src="images/gallery/17.JPG"></li>
-                            <li><img src="images/gallery/18.JPG"></li>
-                            <li><img src="images/gallery/19.JPG"></li>
-                            <li><img src="images/gallery/20.JPG"></li>
-                            <li><img src="images/gallery/21.JPG"></li>
+                            <li><img src="images/gallery/1-min.JPG"></li>
+                            <li><img src="images/gallery/2-min.JPG"></li>
+                            <li><img src="images/gallery/3-min.JPG"></li>
+                            <li><img src="images/gallery/4-min.JPG"></li>
+                            <li><img src="images/gallery/5-min.JPG"></li>
+                            <li><img src="images/gallery/6-min.JPG"></li>
+                            <li><img src="images/gallery/7-min.JPG"></li>
+                            <li><img src="images/gallery/8-min.JPG"></li>
+                            <li><img src="images/gallery/9-min.JPG"></li>
+                            <li><img src="images/gallery/10-min.JPG"></li>
+                            <li><img src="images/gallery/11-min.JPG"></li>
+                            <li><img src="images/gallery/12-min.JPG"></li>
+                            <li><img src="images/gallery/13-min.JPG"></li>
+                            <li><img src="images/gallery/14-min.JPG"></li>
+                            <li><img src="images/gallery/15-min.JPG"></li>
+                            <li><img src="images/gallery/16-min.JPG"></li>
+                            <li><img src="images/gallery/17-min.JPG"></li>
+                            <li><img src="images/gallery/18-min.JPG"></li>
+                            <li><img src="images/gallery/19-min.JPG"></li>
+                            <li><img src="images/gallery/20-min.JPG"></li>
+                            <li><img src="images/gallery/21-min.JPG"></li>
                         </ul>
                     </div>
                 </section>
