chore: update Madhav pic

--- a/team.html
+++ b/team.html
@@ -315,7 +315,7 @@
           <li>
             <div class="user">
               <div class="cont-image">
-                <img src="images/team/16.JPG" />
+                <img src="images/team/Madhav.jpg" />
                 <div class="overlay">
                   <div class="text">
                     <h3>Madhavendra Choksi</h3>
