fix: point of attraction
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
           this.point_of_attraction = {
             x: $(window).width() / 2,
-            y: $(window).height() / 2,
+            y: $(window).height() / 2 - $(window).height() / 6,
           };
 
           if (Math.random() > 0.5) {
