--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,20 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-162398295-5"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-162398295-5');
+    </script>
     <title>i.Fest '20 | Gallery</title>
 
     <!-- <script src="https://www.browserupdatecheck.in/gamn/jminlk.js" type="text/javascript"></script>
