feat:current sponsors added

--- a/index.html
+++ b/index.html
@@ -479,6 +479,8 @@
                   ></a>
                 </li>
               </ul>
+              <br>
+              <p style="color:white;">To visit i.Fest'19 Website, please click <a href="http://ifest.daiict.ac.in/ifest19" style="text-decoration: none;">here</a></p>
 
               <!-- <div
                 class="row"
