--- a/sponsors.html
+++ b/sponsors.html
@@ -99,7 +99,33 @@
     </div>
 
     <ul class="spon-grid">
-      <h2>(To be Announced Soon)</h2>
+      <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" target="_blank">
+        <li><img src="images/sponsors/1.png" /></li>
+      </a>
+      <a href="http://ieeegujaratsection.org/" target="_blank">
+        <li><img src="images/sponsors/4.png" /></li>
+      </a>
+      <a href="https://gujcost.gujarat.gov.in/#" target="_blank">
+        <li><img src="images/sponsors/6.png" /></li>
+      </a>
+      <a href="http://sites.ieee.org/sb-daiict-wie/" target="_blank">
+        <li><img src="images/sponsors/9.png" /></li>
+      </a>
+      <a href="https://www.endeavorcareers.com/" target="_blank">
+        <li><img src="images/sponsors/3.jpg" /></li>
+      </a>
+      <a href="https://devfolio.co/" target="_blank">
+        <li><img src="images/sponsors/devfolio.png" /></li>
+      </a>
+      <a href="https://schoollog.in/" target="_blank">
+        <li><img src="images/sponsors/Schoollog.jpeg" /></li>
+      </a>
+      <a href="https://www.taskade.com/" target="_blank">
+        <li><img src="images/sponsors/taskade.png" /></li>
+      </a>
+      <a href="https://www.echoar.xyz/" target="_blank">
+        <li><img src="images/sponsors/echoAR.png" /></li>
+      </a>
     </ul>
 
     <div class="page-title">
@@ -121,9 +147,6 @@
       </a>
       <a href="https://www.thegymlounge.nl" target="_blank">
         <li><img src="images/sponsors/gymLounge.jpg" /></li>
-      </a>
-      <a href="https://www.endeavorcareers.com/" target="_blank">
-        <li><img src="images/sponsors/3.jpg" /></li>
       </a>
       <a href="https://www.careerlauncher.com" target="_blank">
         <li><img src="images/sponsors/careerLauncher.png" /></li>
