chore: add sponsor - Black Position
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/sponsors.html
+++ b/sponsors.html
@@ -99,7 +99,10 @@
     </div>
 
     <ul class="spon-grid">
-      <a href="https://ieee-sb-daiict.github.io/ieee-2020/index.html" target="_blank">
+      <a
+        href="https://ieee-sb-daiict.github.io/ieee-2020/index.html"
+        target="_blank"
+      >
         <li><img src="images/sponsors/1.png" /></li>
       </a>
       <a href="http://ieeegujaratsection.org/" target="_blank">
@@ -125,6 +128,9 @@
       </a>
       <a href="https://www.echoar.xyz/" target="_blank">
         <li><img src="images/sponsors/echoAR.png" /></li>
+      </a>
+      <a href="https://www.blackposition.in/" target="_blank">
+        <li><img src="images/sponsors/black_position.jpeg" /></li>
       </a>
     </ul>
 
@@ -215,9 +221,9 @@
         <li><img src="images/sponsors/24.jpg" /></li>
       </a>
       <a
-      href="https://www.ongcindia.com/wps/wcm/connect/en/home/"
-      target="_blank"
-    >
+        href="https://www.ongcindia.com/wps/wcm/connect/en/home/"
+        target="_blank"
+      >
         <li><img src="images/sponsors/18.jpeg" /></li>
       </a>
       <a href="" target="_blank">
@@ -250,9 +256,6 @@
       <a href="https://www.ncodesolutions.com/" target="_blank">
         <li><img src="images/sponsors/16.png" /></li>
       </a>
-
-
-      
     </ul>
 
     <script src="./js/index.js"></script>
