feat: add Razorpay gateway
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@
             <a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
               <img id="tictechtoelogo" src="images/tictechtoelogo.png" />
             </a>
+            <form>
+              <script
+                src="https://checkout.razorpay.com/v1/payment-button.js"
+                data-payment_button_id="pl_FwiYiEY9P0z5Mu"
+              ></script>
+            </form>
+            <form>
+              <script
+                src="https://checkout.razorpay.com/v1/payment-button.js"
+                data-payment_button_id="pl_Fwimz5AtxgwZuN"
+              ></script>
+            </form>
           </div>
         </div>
       </div>
@@ -479,8 +491,15 @@
                   ></a>
                 </li>
               </ul>
-              <br>
-              <p style="color:white;">To visit i.Fest'19 Website, please click <a href="http://ifest.daiict.ac.in/ifest19" style="text-decoration: none;">here</a></p>
+              <br />
+              <p style="color: white">
+                To visit i.Fest'19 Website, please click
+                <a
+                  href="http://ifest.daiict.ac.in/ifest19"
+                  style="text-decoration: none"
+                  >here</a
+                >
+              </p>
 
               <!-- <div
                 class="row"
