fix: update Razorpay buttons
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/index.html
+++ b/index.html
@@ -344,21 +344,24 @@
               </ul>
             </div>
             <br /><br />
-            <a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
-              <img id="tictechtoelogo" src="images/tictechtoelogo.png" />
-            </a>
-            <form>
+            <div style="color: white; padding-bottom: 15px">
+              <h1 style="color: white">Register for i.Fest'20 here:</h1>
+            </div>
+            <form style="padding: 5px">
               <script
                 src="https://checkout.razorpay.com/v1/payment-button.js"
                 data-payment_button_id="pl_FwiYiEY9P0z5Mu"
               ></script>
             </form>
-            <form>
+            <form style="padding: 5px">
               <script
                 src="https://checkout.razorpay.com/v1/payment-button.js"
                 data-payment_button_id="pl_Fwimz5AtxgwZuN"
               ></script>
             </form>
+            <a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
+              <img id="tictechtoelogo" src="images/tictechtoelogo.png" />
+            </a>
           </div>
         </div>
       </div>
