feat:Added The Open Box Page

--- a/event/event.html
+++ b/event/event.html
@@ -48,7 +48,7 @@
     <nav id="menu">
         <a href="../index.html">Home</a>
         <a href="../event/event.html">Events</a>
-        <!--<a href="../workshops.html">Workshops</a>-->
+        <a href="../openbox.html">The Open Box</a>
         <a href="../team.html">Team</a>
         <!--<a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
         <a href="../register.html">Register</a>-->
