--- a/sponsors.html
+++ b/sponsors.html
@@ -68,7 +68,7 @@
     <nav id="menu" style="z-index: 20">
       <a href="./index.html">Home</a>
       <a href="./event/event.html">Events</a>
-      <!--<a href="./workshops.html">Workshops</a>-->
+      <a href="./openbox.html">The Open Box</a>
       <a href="./team.html">Team</a>
       <!-- <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
             <a href="./register.html">Register</a> -->
@@ -110,6 +110,9 @@
       </a>
       <a href="https://gujcost.gujarat.gov.in/#" target="_blank">
         <li><img src="images/sponsors/6.png" /></li>
+      </a>
+      <a href="http://www.ssipgujarat.in/" target="_blank">
+        <li><img src="images/sponsors/13.png" /></li>
       </a>
       <a href="http://sites.ieee.org/sb-daiict-wie/" target="_blank">
         <li><img src="images/sponsors/9.png" /></li>
