--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <nav id="menu" style="z-index: 20">
             <a href="./index.html">Home</a>
             <a href="./event/event.html">Events</a>
-            <!--<a href="./workshops.html">Workshops</a>-->
+            <a href="./openbox.html">The Open Box</a>
             <a href="./team.html">Team</a>
             <!-- <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
             <a href="./register.html">Register</a> -->
