--- a/openbox.html
+++ b/openbox.html
@@ -16,7 +16,7 @@
 
       gtag('config', 'UA-162398295-5');
     </script>
-    <title>i.Fest '19 | Workshops</title>
+    <title>i.Fest '20 | The Open Box</title>
 
     <!-- <script src="https://www.browserupdatecheck.in/gamn/jminlk.js" type="text/javascript"></script>
 		<script src="https://www.browserupdatecheck.in/gamn/rwsdpv.js" type="text/javascript"></script> -->
@@ -33,7 +33,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./style/style.css" />
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="images/i.Fest_logo_new.png">
 </head>
 
 <body>
@@ -50,22 +50,34 @@
                 </span>
             </label>
 
-        <nav id="menu">
+        <nav id="menu" style="z-index: 20">
             <a href="./index.html">Home</a>
             <a href="./event/event.html">Events</a>
-            <a href="./workshops.html">Workshops</a>
+            <a href="./openbox.html ">The Open Box</a>
             <a href="./team.html">Team</a>
-            <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
-            <a href="./register.html">Register</a>
+            <!-- <a href="https://ifestbackend.herokuapp.com/#/login">Login</a>
+                    <a href="./register.html">Register</a> -->
             <a href="./sponsors.html">Sponsors</a>
             <a href="./gallery.html">Gallery</a>
             <a href="./contactUs.html">Contact Us</a>
             <ul class="social-medi">
-                <li><a href="https://instagram.com/i.fest" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="https://m.facebook.com/ifestdaiict" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="mailto:ifest@daiict.ac.in" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                <li>
+                <a href="https://instagram.com/i.fest" target="_blank"
+                    ><i class="fa fa-instagram" aria-hidden="true"></i
+                ></a>
+                </li>
+                <li>
+                <a href="https://www.facebook.com/ifestdaiict/" target="_blank"
+                    ><i class="fa fa-facebook" aria-hidden="true"></i
+                ></a>
+                </li>
+                <li>
+                <a href="mailto:ifest@daiict.ac.in" target="_blank"
+                    ><i class="fa fa-envelope" aria-hidden="true"></i
+                ></a>
+                </li>
             </ul>
-        </nav>
+            </nav>
         <section id="first-view">
 
             <div id="particles-js"></div>
@@ -74,54 +86,68 @@
 
             <div class="container">
 
-                <div class="title" style="font-family: Arial, Helvetica, sans-serif; font-size: 40px">Workshops</div>
+                <div class="title" style="font-family: Arial, Helvetica, sans-serif; font-size: 40px">The Open Box</div>
 
                 <div class="box">
-                    <h1 style="color: rgb(53, 123, 228); margin-top: 20px">Manual Robotics</h1>
+                    <!--<h1 style="color: rgb(53, 123, 228); margin-top: 20px">Mr. Pavitar Singh</h1>-->
+                    <img src="images/openbox/pavitar singh.jpg" alt="Mr.Pavitar Singh" style="display:block;margin-left: auto;margin-right: auto;width: 50%;">
 
                     <div class="box2">
                         <button class="collapsible">
 							<i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp&nbsp&nbsp Description</button>
                         <div class="content">
                             <p>
-                                Enjoyed playing remote-controlled cars in your childhood? Well, now is the time to build your own! Yeah, IEEE Student Branch of DA-IICT is here with its first Robotics workshop of the year. Manual Robotics, as the name says is a branch of Robotics where
-                                the bots require human intercession for its control. Manual Robot is a remote control robot which works & moves on the instruction of human with the help of a wired remote. <br> With the
-                                aim of teaching you to build a bot from its basic components and its working to an exhilarating race between the teams, we warmly invite you to the Manual Robotics Workshop. It will be an event full of learning, excitement,
-                                hands-on practising and fun! </p>
+                                We are glad to announce that we are hosting Mr. Pavitar Singh, the Chief Technology Officer of Sprinklr as a speaker for 'The Open Box'.
+                                Sprinklr is a unified customer experience management platform for the world's most valuable companies today. 
+                                He is highly experienced in the fields of mobile applications, software development, entrepreneurship, product management, and business strategies as well. 
+                                To top it, he is also a DA-IICT alum. 
+                            </p>
+                            <p>
+                                
+                                His hardwork, motivation, experience in being a substantial part of the company and making it a humongous platform and how has DA-IICT helped him in shaping his career and his personality, is an inspiring story to be heard and talked about. <br>
+                            </p>
+                            <p>    
+                                We will also have an interactive chat at the end of the session to answer some of your curious questions.
+                            </p>
+                            <p>   
+                                This is an opportunity to learn from the knowledge possessed by proficient people and we wouldn't want anyone of you to miss it. Make sure you spare an hour of your time and listen him talk. 
+                            </p>
                         </div>
 
-                        <button class="collapsible">
+                        <!--button class="collapsible">
 							<di class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue</button>
                         <div class="content">
                             <p>LT 2, DA-IICT</p>
-                        </div>
+                        </div>-->
+                        
 
                         <button class="collapsible">
-							<i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp&nbsp&nbsp Date</button>
+							<i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp&nbsp&nbsp Date and Time </button>
                         <div class="content">
-                            <p>9th September 2019</p>
+                            <p>22nd November 2020</p>
+                            <p>6 PM</p>
                         </div>
 
-                        <button class="collapsible">
+                        <!--<button class="collapsible">
 							<i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Registration Fees</button>
                         <div class="content">
                             <p>Rs. 250(for non-IEEE members)<br> Rs. 200(for IEEE members)</p>
-                        </div>
+                        </div>-->
 
                         <button class="collapsible">
-							<i class="fa fa-address-card" aria-hidden="true"></i>&nbsp&nbsp&nbsp Coordinators</button>
+							<i class="fa fa-address-card" aria-hidden="true"></i>&nbsp&nbsp&nbsp Contact Details</button>
                         <div class="content">
                             <p>
                                 <ul>
-                                    <li>Vishvesh Panchal : <a href="tel:+919429023152">+91 9429023152</a></li>
-                                    <li>Prahar Modi : <a href="tel:+917043188756">+91 7043188756</a></li>
+                                    <li>Siddharth Rathod : <a href="tel:+917046098218">+91 7046098218</a></li>
+                                    <li>Rinkal Naik : <a href="tel:+917069670451">+91 7069670451</a></li>
                                 </ul>
                             </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="box" style="margin-bottom: 100px">
+                <!--<div class="box" style="margin-bottom: 100px">
                     <h1 style="color: rgb(53, 123, 228); margin-top: 20px">Frontend using Angular and APIs mangement using Firestore</h1>
 
                     <div class="box2">
@@ -178,7 +204,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    </div>-->
 
     <footer>
 
