--- a/index.html
+++ b/index.html
@@ -344,16 +344,16 @@
               </ul>
             </div>
             <br /><br />
-            <div style="color: white; padding-bottom: 15px">
-              <h1 style="color: white">Register for i.Fest'20 here:</h1>
+            <div style="color: white; padding-bottom: 5px">
+              <h2 style="color: white">Register for i.Fest'20 here:</h2>
             </div>
-            <form style="padding: 5px">
+            <form>
               <script
                 src="https://checkout.razorpay.com/v1/payment-button.js"
                 data-payment_button_id="pl_FwiYiEY9P0z5Mu"
               ></script>
             </form>
-            <form style="padding: 5px">
+            <form>
               <script
                 src="https://checkout.razorpay.com/v1/payment-button.js"
                 data-payment_button_id="pl_Fwimz5AtxgwZuN"
