--- a/index.html
+++ b/index.html
@@ -351,12 +351,14 @@
               <script
                 src="https://checkout.razorpay.com/v1/payment-button.js"
                 data-payment_button_id="pl_FwiYiEY9P0z5Mu"
+                data-button_text="General Participants"
               ></script>
             </form>
             <form>
               <script
                 src="https://checkout.razorpay.com/v1/payment-button.js"
                 data-payment_button_id="pl_Fwimz5AtxgwZuN"
+                data-button_text="IEEE Members"
               ></script>
             </form>
             <a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
